release: v1.0.0-rc1 prep
